print gcapplicationstoptime